namespace Constants
{
    class PlayerInputAction
    {
        public const string InputActionMap = "Player";

        public const string Move = "Move";
        public const string Look = "Look";
        public const string Jump = "Jump";
        public const string Interact = "Interact";


    }

    class AnimatorParam
    {
        public const string IsMoving = "IsMoving";
        public const string Forward = "Forward";
        public const string Right = "Right";
        public const string GroundSpeed = "GroundSpeed";
        public const string IsFalling = "IsFalling";
        public const string IsJumping = "IsJumping";
        public const string VelocityY = "VelocityY";
        public const string IsGrounded = "IsGrounded";

    }

}